apps/workflows/overlays/csdp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/protocol: https
    ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  creationTimestamp: null
  name: csdp-workflows-ingress
  namespace: csdp
spec:
  ingressClassName: nginx
  rules:
  - host: a855d53c861ea4248af6b61b57e020a2-5961aedc277d3584.elb.us-east-2.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: argo-server
            port:
              number: 2746
        path: /workflows(/|$)(.*)
        pathType: ImplementationSpecific
status:
  loadBalancer: {}
